objects/obj_Aug28__c.object
<CustomObject>
    <fields>
        <fullName>Aug28_field1_del_del__c</fullName>
        <label>Aug28_field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug28_field3__c</fullName>
        <label>Aug28_field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug28_field3_del__c</fullName>
        <label>Aug28_field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aug_field2_del__c</fullName>
        <label>aug_field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>obj_Aug28</label>
    <nameField>
        <label>obj_Aug28 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>obj_Aug28</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>